fixed styling issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,9 @@ body{
     justify-content: center;
     align-items: center;
     background: var(--darkslate);
+    max-height: 100vh;
     height: 100vh;
+    overflow-x: hidden;
 }
 .wrapper{
     width: 900px;
